[package]
name = "re2line"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
enum-map = { version = "2.7.3", features = ["serde"] }
dirs = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence" ] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_plot = "0.34.0"
epaint = "0.33.3"
re2script = { git = "https://github.com/descawed/re2script.git", branch = "master" }
re2shared = { path = "../re2shared" }
residat = { git = "https://github.com/descawed/residat.git", branch = "master" }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = []
motion-simulation = []